# droneMk2

./: .gitmodules  ARCHITECTURE_IPC.md  CC1101_test.py  CLAUDE.md  CMakeLists.txt  Design.md  GUIDE_COMPOSANTS.md  INDEX.csv  README.md  TELEMETRY.csv
.cache/clangd/index/: AckFifo.hpp.30F9383A8A7E38E0.idx  ComponentBase.hpp.960F5F70486444D9.idx  Conversions.hpp.073ED676F540B1D4.idx  Driver.hpp.09953A92F464619B.idx  Driver.hpp.2F592EADFDE54E5E.idx  Driver.hpp.6D13A3737417F63A.idx  Framing.hpp.53695F8F818EC270.idx  GlobalWatchdog.hpp.CD1DD63DDABD85CD.idx  LD06.cpp.B9E1431251931271.idx  LD06.hpp.DFE8F4D6593696BE.idx  LIS3MDL.cpp.5CE33F024A75BF3A.idx  LIS3MDL.hpp.06955F2A744B81A4.idx  MV_SITL.cpp.4464DC650E99ACAC.idx  MavlinkInterface.cpp.78134F86B2664AFC.idx  MavlinkInterface.hpp.E30AEE0E3C10FCB1.idx  NEO-M8N.cpp.343FB90BC3EB2617.idx  NEO-M8N.hpp.7C8B3F368A838947.idx  Navigation.cpp.6210AAF2B5F30AFA.idx  Navigation.hpp.1445549B151CE194.idx  PacketScheduler.hpp.0500880553277F9A.idx  PendingAck.hpp.F1AB78211715D621.idx  PendingAckQueue.hpp.619CC2F966D111F9.idx  SensorFusion.cpp.45D1EDB30C7EF7D9.idx  SensorsFusion.hpp.16DD4F83A7B8547F.idx  SharedComMem.hpp.3DF55E14AEA01998.idx  SharedCompMem.hpp.1B3DAFF1D990E84F.idx  SharedFCStatus.hpp.1849D38A69B8E089.idx  SharedMemory.hpp.013D4A4B803047AA.idx  SharedNavMem.hpp.3A2D43378429A4E1.idx  SharedSFMem.hpp.A898572EB6816F35.idx  SharedSysStateMem.hpp.44EF1CAD7B70A13E.idx  ShmPaths.hpp.4342FDACBA782578.idx  SysMonitoring.hpp.7C664A3079047183.idx  SystemMonitoring.cpp.8B4B8749B9D718B7.idx  UDP_bridge.cpp.A7685D10FF3CB9B8.idx  UartMavlinkLink.cpp.22DA25873E6718CA.idx  UartMavlinkLink.hpp.B80459B95DED7578.idx  UdpMavlinkLink.cpp.9C3A2BC282DA0AA2.idx  UdpMavlinkLink.hpp.0DD7A96C9329437F.idx  UdpTelemetryDriver.cpp.EED7B11330E98C79.idx  (+362 more)
autres/: LD06_test.py
include/drone/: interfaces.hpp  shared_state.hpp  shm.hpp  types.hpp  utilities.hpp
include/drone/Components/: SharedCompMem.hpp
include/drone/Components/Drivers/: LD06.hpp  LIS3MDL.hpp  NEO-M8N.hpp
include/drone/Components/MavlinkInterface/: AckFifo.hpp  Conversions.hpp  Driver.hpp  MAVLINKINTERFACE.md  MavlinkInterface.hpp  PendingAck.hpp  PendingAckQueue.hpp  SharedFCStatus.hpp
include/drone/Components/MavlinkInterface/Driver/: UartMavlinkLink.hpp  UdpMavlinkLink.hpp
include/drone/Components/Navigation/: Navigation.hpp  SharedNavMem.hpp
include/drone/Components/SensorFusion/: SensorsFusion.hpp
include/drone/Components/SensorFusions/: Driver.hpp  SensorsFusion.hpp  SharedSFMem.hpp
include/drone/Components/System Monitoring/: Driver.hpp  Framing.hpp  PacketScheduler.hpp  SYSMONITORING.md  SharedComMem.hpp  SysMonitoring.hpp
include/drone/Components/System Monitoring/Driver/: CC1101_Driver.hpp  UdpTelemetryDriver.hpp  UdpVideoDriver.hpp  WFB_NG_Driver.hpp
include/drone/SITL/: ShmPaths.hpp
include/drone/core/: BlockBase.hpp  ComponentBase.hpp  GlobalWatchdog.hpp  SharedMemory.hpp  SharedSysStateMem.hpp  Watchdog.hpp  watchdog.hpp
src/: main.cpp
src/Drivers/: LD06.cpp  LIS3MDL.cpp  NEO-M8N.cpp
src/MavlinkInterface/: MavlinkInterface.cpp  UartMavlinkLink.cpp  UdpMavlinkLink.cpp
src/Navigation/: Navigation.cpp
src/SITL/: MV_SITL.cpp  UDP_bridge.cpp
src/SensorsFusion/: SensorFusion.cpp
src/SystemMonitoring/: SystemMonitoring.cpp  UdpTelemetryDriver.cpp  UdpVideoDriver.cpp
tests/: test_global_watchdog.cpp  test_mavlink.cpp  test_shared_state.cpp  test_telemetry.cpp  test_types.cpp  test_watchdog.cpp
tests/helpers/: stub_child.cpp
tools/: codes_common.py  codes_editor.html  codes_editor.py  gen_codes.py  gen_telemetry.py  telemetry_common.py
tools/dashboard/: dashboard_server.py  menu.html  sitl_mv.html  sysmonitoring.html  telemetry_codec.py
